# animora-recsys

./: README.md  main.py
01_heuristic/generate_recommendation/: Dockerfile  main.py
01_heuristic/generate_recommendation/database/: query_runner.py
01_heuristic/generate_recommendation/recommender/: heuristic.py
01_heuristic/timeline/: Dockerfile  heuristic.py  main.py  pyproject.toml
01_heuristic/timeline/database/: query_runner.py
02_content_based/: train.py
api/: embedding_to_train.py  main.py  recommend_timeline.py  retrain_model.py
base/: data.py  engine.py  gmf.py  mlp.py  neumf.py  train.py  utils.py
batch/: generate_recommendations.py  generate_recommendations_old.py  train.py
components/: engine.py  mmneumf.py
images/: neucf_architecture.drawio  system_architecture.drawio
neumf/: engine.py  mmneumf.py
s01_heuristic/: main.py
s01_heuristic/generate_recommendation/: Dockerfile  pyproject.toml  requirements.txt
s01_heuristic/timeline/: main.py
s02_neucf/batch/: generate_recommendations.py
s02_neucf/generate_recommendation/: main.py
s02_neucf/timeline/: main.py
s02_neucf/utils/: download_model.py  upload_model.py
s02_recsys_neucf/: pyproject.toml
s02_recsys_neucf/neucf/: data.py  mmneucf.py
s02_recsys_neucf/recommender/: neucf_rec.py
s02_recsys_neucf/utils/: model.py  settings.py
s02_train_neucf/: main.py
s02_train_neucf/neucf/: engine.py
s02_train_neucf/utils/: model.py  settings.py
src/: download_model.py  train_prod.py  train_sim.py  upload_model.py
strategies/: base.py  heuristic.py  neucf.py
utils/: config.py
(+18 files in other folders)
